# FileArchiver

./: README.md  settings.gradle.kts
.github/workflows/: android_build.yml
app/: build.gradle.kts
app/src/androidTest/java/com/example/filearchiver/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/minizip/: zip.c
app/src/main/java/com/example/filearchiver/: FileAdapter.java  FileItem.java  FileListActivity.java  FileUtils.java  MainActivity.java
app/src/main/res/drawable/: folder_icon.xml  ic_add_file.xml  ic_file.xml  ic_folder.xml  ic_image.xml  ic_main_folder.xml
app/src/main/res/layout/: activity_file_list.xml  activity_main.xml  item_file.xml
app/src/main/res/menu/: menu_file_list.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/filearchiver/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
